--- a/game.project
+++ b/game.project
@@ -14,4 +14,5 @@ input_method = HiddenInputField
 [project]
 title = test_liveupdate
 dependencies = https://github.com/andsve/dirtylarry/archive/master.zip
+version = 1.1
 
